# Ko-Merge

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DOCKER_HUB_OVERVIEW.md  DOCKER_OPTIMIZATION.md  Dockerfile  GITHUB_DEPLOYMENT_GUIDE.md  README.md  RELEASE_v2.0.0.md  app.py  docker-compose.yml  pyproject.toml  start-dev.bat  stop-dev.bat
.github/workflows/: docker-image.yml
backend/: entrypoint.sh  pyproject.toml  requirements.txt  start_server.py
backend/app/: main.py
backend/app/services/: amazon_cachedb.py  amazon_scraper.py  book_metadata.py  cleanup_service.py  cover_storage.py  database.py  playwright_wrapper.py
backend/data/: cover_storage.sqlite3  preferences.sqlite3
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BookCover.tsx  BookList.tsx  FileUpload.tsx  MergeGroups.tsx  Results.tsx
frontend/src/config/: deployment.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  bookCache.ts  coverRefresh.ts  formatKOReaderTime.ts  formatTime.ts  sessionManager.ts
templates/: base.html  download.html  index.html  merge.html  result.html  stats.html
