[project]
name = "ko-merge-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.11",
    "fastapi>=0.116.1",
    "httpx>=0.25.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[tool.uv]
dev-dependencies = []
